--- a/LayeredArchitecture/appsettings.json
+++ b/LayeredArchitecture/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "default": "Data Source=DESKTOP-J1PFA5L;Initial Catalog=MyBooksAppDb;Integrated Security=True;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False"
+  }
 }
